# pico_robot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
python_scripts/: main.py  pyproject.toml
python_scripts/apriltag_detection/: apt_detection.py  apt_navigation.py  calibration.npz
python_scripts/utils/: TCP_connection.py  ps4_controller.py
src/: CMakeLists.txt  DiffDRIVE.cpp  DiffDRIVE.h  MotorMANAGER.cpp  MotorMANAGER.h  MotorPID.cpp  MotorPID.h  TCP_Server.c  main.cpp
