[project]
name = "python_scripts"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pupil-apriltags>=1.0.4.post11",
    "pyqt6>=6.9.1",
    "pyserial>=3.5",
    "pyyaml>=6.0.2",
]
